Login Screen's left bar designed and coded

--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <!-- Login Screen -->
+    <main class="login-sign-screen">
+      <div class="left-bar">
+        <div class="head-text">
+          <h1 class="main-text">Authorization</h1>
+          <h2 class="sub-text">of your account</h2>
+        </div>
+        <div class="user-form">
+          <h4 class="input-up-text user-form-texts" >username or e-mail</h4>
+          <input type="email" name="username-input" value="">
+          <h4 class="input-up-text user-form-texts" >password</h4>
+          <input type="password" name="password-input" value="">
+          <a href="#" class="small-text" id="forgat-text">Forgat your password?</a>
+          <div class="form-button">
+            <input type="button" name="login-button" value="Sign In">
+            <div class="remember-me">
+              <input type="checkbox" name="remember-checkbox" value="">
+              <h5 class="small-text" id="remember-me">Remember me</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-bar">
+        <h2 class="message-title-text">Hello</h2>
+        <h3 class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+      </div>
+    </main>
   </body>
 </html>
